{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 8,
  "lineage": "5bf2db4c-1d49-e196-6dfc-874ac703a87f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:563988523006:instance/i-04c7c968a6bea23c6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c7c968a6bea23c6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0141dca6028a312bd",
            "private_dns": "ip-10-0-0-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.5",
            "public_ip": "18.215.185.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08fa39c92cee5661e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073dc16ffc337056d",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b3d187c417931a8"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-allowed",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc-iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563988523006:internet-gateway/igw-01e6e44d161e176ac",
            "id": "igw-01e6e44d161e176ac",
            "owner_id": "563988523006",
            "tags": {
              "Name": "IG"
            },
            "tags_all": {
              "Name": "IG"
            },
            "vpc_id": "vpc-022a72693a7228c22"
          },
          "dependencies": [
            "aws_subnet.public-subnet",
            "aws_vpc.vpc-iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563988523006:route-table/rtb-094e562d15bd51e61",
            "id": "rtb-094e562d15bd51e61",
            "owner_id": "563988523006",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01e6e44d161e176ac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table"
            },
            "tags_all": {
              "Name": "Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-022a72693a7228c22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc-iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020927b8bddbec65f",
            "route_table_id": "rtb-094e562d15bd51e61",
            "subnet_id": "subnet-073dc16ffc337056d"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.route-Table",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc-iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563988523006:security-group/sg-01b3d187c417931a8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b3d187c417931a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230129004657482200000001",
            "name_prefix": "terraform-",
            "owner_id": "563988523006",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-022a72693a7228c22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563988523006:subnet/subnet-073dc16ffc337056d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073dc16ffc337056d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "563988523006",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-022a72693a7228c22"
          },
          "dependencies": [
            "aws_vpc.vpc-iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-iti",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563988523006:vpc/vpc-022a72693a7228c22",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-018bb695a5710dcd3",
            "default_route_table_id": "rtb-042b4d87bd501e994",
            "default_security_group_id": "sg-0904253e28ebcf52e",
            "dhcp_options_id": "dopt-0cf77dbc4b26f1edb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-022a72693a7228c22",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042b4d87bd501e994",
            "owner_id": "563988523006",
            "tags": {
              "Name": "vpc-iti"
            },
            "tags_all": {
              "Name": "vpc-iti"
            }
          }
        }
      ]
    }
  ]
}